# Playwright-tutorial

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  ruff.toml
.devcontainer/: .zshrc  Dockerfile  continue-config.yaml  devcontainer.json  opencode-config.yaml  opencode-rules.md  opencode.json  post_create_script.sh
